--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/shaniqua16/Lewis_app#readme",
   "devDependencies": {
-    "prisma": "^6.7.0"
+    "prisma": "^6.8.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.8.2"
   }
 }
