--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "<!-- PROBLEM:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon src/index.js",
+    "heroku-postbuild": "npm install && npx prisma migrate deploy && npx prisma generate",
+    "test": "jest --maxWorkers=2",
+    "test:watch": "jest --maxWorkers=2 --watch"
   },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shaniqua16/Lewis_app.git"
@@ -19,9 +23,20 @@
   },
   "homepage": "https://github.com/shaniqua16/Lewis_app#readme",
   "devDependencies": {
-    "prisma": "^6.8.2"
+    "@prisma/client": "^6.8.2",
+    "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
+    "xml2js": "^0.6.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2"
+    "prisma": "^6.8.2",
+     "supertest": "^7.1.0",
+      "jest": "^29.7.0"
   }
 }
